{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 79,
  "lineage": "9a33cdfe-617f-fb91-7db1-f1e4cb238a1c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:228407934416:loadbalancer/app/chimein-server-main-alb/f2d8a35ab94ca94e",
            "arn_suffix": "app/chimein-server-main-alb/f2d8a35ab94ca94e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "chimein-server-main-alb-2122418529.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:228407934416:loadbalancer/app/chimein-server-main-alb/f2d8a35ab94ca94e",
            "idle_timeout": 300,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "chimein-server-main-alb",
            "security_groups": [
              "sg-0e4366bc6d53a7380"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0443331a932308a5d"
              },
              {
                "subnet_id": "subnet-09a1e89ec718c82ca"
              }
            ],
            "subnets": [
              "subnet-0443331a932308a5d",
              "subnet-09a1e89ec718c82ca"
            ],
            "tags": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-ALB",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "tags_all": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-ALB",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "vpc_id": "vpc-044f2d564e357eef2",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:228407934416:listener/app/chimein-server-main-alb/f2d8a35ab94ca94e/8a0d511118ead797",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:228407934416:listener/app/chimein-server-main-alb/f2d8a35ab94ca94e/8a0d511118ead797",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:228407934416:loadbalancer/app/chimein-server-main-alb/f2d8a35ab94ca94e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:228407934416:listener/app/chimein-server-main-alb/f2d8a35ab94ca94e/59b9b09651267081",
            "certificate_arn": "arn:aws:acm:ap-south-1:228407934416:certificate/003b63bb-cf82-4570-9fb1-c6611a34d30b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:228407934416:targetgroup/chimein-server-main-tg/feebe600008b9fd4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:228407934416:listener/app/chimein-server-main-alb/f2d8a35ab94ca94e/59b9b09651267081",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:228407934416:loadbalancer/app/chimein-server-main-alb/f2d8a35ab94ca94e",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.dev_cert",
            "aws_acm_certificate_validation.cert_validation",
            "aws_alb.application_load_balancer",
            "aws_alb_target_group.server_backend_tg",
            "aws_route53_record.cert_validation_record",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main",
            "data.aws_route53_zone.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "alb_http_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:228407934416:targetgroup/chimein-server-main-tg/feebe600008b9fd4",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:228407934416:listener-rule/app/chimein-server-main-alb/f2d8a35ab94ca94e/8a0d511118ead797/2b3fe01795c1444d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:228407934416:listener-rule/app/chimein-server-main-alb/f2d8a35ab94ca94e/8a0d511118ead797/2b3fe01795c1444d",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:228407934416:listener/app/chimein-server-main-alb/f2d8a35ab94ca94e/8a0d511118ead797",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_alb_listener.alb_http_listener",
            "aws_alb_target_group.server_backend_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "server_backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:228407934416:targetgroup/chimein-server-main-tg/feebe600008b9fd4",
            "arn_suffix": "targetgroup/chimein-server-main-tg/feebe600008b9fd4",
            "connection_termination": false,
            "deregistration_delay": "60",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 29,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:228407934416:targetgroup/chimein-server-main-tg/feebe600008b9fd4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "chimein-server-main-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "cookie_name": "session",
                "enabled": true,
                "type": "app_cookie"
              }
            ],
            "tags": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-tg",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "tags_all": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-tg",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "target_type": "instance",
            "vpc_id": "vpc-044f2d564e357eef2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b56fe8eaac79201",
            "domain": "vpc",
            "id": "eipalloc-01b56fe8eaac79201",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-207-26-158.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.26.158",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-eip",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "tags_all": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-eip",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09796aa7c278007bb",
            "arn": "arn:aws:ec2:ap-south-1:228407934416:instance/i-00a9e19813aa5fe2c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a9e19813aa5fe2c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "chimeinEC2KeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06e65a14d1c4c0af6",
            "private_dns": "ip-10-0-1-170.ap-south-1.compute.internal",
            "private_ip": "10.0.1.170",
            "public_dns": "ec2-13-233-223-86.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.223.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04a73928ac5fa8665",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a1e89ec718c82ca",
            "tags": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-bastion-host",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "tags_all": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-bastion-host",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0907e4ebae04cfa4a"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main",
            "data.aws_ssm_parameter.al2023_minimal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:228407934416:internet-gateway/igw-08d16658ae0cb414c",
            "id": "igw-08d16658ae0cb414c",
            "owner_id": "228407934416",
            "tags": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-vpc-igw",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "tags_all": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-vpc-igw",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "vpc_id": "vpc-044f2d564e357eef2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b56fe8eaac79201",
            "connectivity_type": "public",
            "id": "nat-04aeaa6bbc0a7c0e9",
            "network_interface_id": "eni-0780e6ac3fe433c77",
            "private_ip": "10.0.1.190",
            "public_ip": "15.207.26.158",
            "subnet_id": "subnet-09a1e89ec718c82ca",
            "tags": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-nat-gw",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "tags_all": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-nat-gw",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.main_igw",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04782ee8c641773b61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04aeaa6bbc0a7c0e9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04782ee8c641773b6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08d16658ae0cb414c",
            "id": "r-rtb-0fc007f2350da849b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fc007f2350da849b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_route_table",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:228407934416:route-table/rtb-04782ee8c641773b6",
            "id": "rtb-04782ee8c641773b6",
            "owner_id": "228407934416",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-private-RT",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "tags_all": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-private-RT",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-044f2d564e357eef2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:228407934416:route-table/rtb-0fc007f2350da849b",
            "id": "rtb-0fc007f2350da849b",
            "owner_id": "228407934416",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-public-RT",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "tags_all": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-public-RT",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-044f2d564e357eef2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5180402dfde768e",
            "route_table_id": "rtb-04782ee8c641773b6",
            "subnet_id": "subnet-0426c8ebf33ac0082"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a5db869d7b391fb",
            "route_table_id": "rtb-04782ee8c641773b6",
            "subnet_id": "subnet-085121e9516f66147"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a0cada5e748c184",
            "route_table_id": "rtb-0fc007f2350da849b",
            "subnet_id": "subnet-09a1e89ec718c82ca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07966204d54129b9f",
            "route_table_id": "rtb-0fc007f2350da849b",
            "subnet_id": "subnet-0443331a932308a5d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:228407934416:security-group/sg-0e4366bc6d53a7380",
            "description": "Allows traffic through the application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4366bc6d53a7380",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows HTTP traffic to load balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows HTTPS traffic to load balancer",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "chimein-server-main-alb-sg",
            "name_prefix": "",
            "owner_id": "228407934416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-alb-sg",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "tags_all": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-alb-sg",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-044f2d564e357eef2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "autoscaling_group_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:228407934416:security-group/sg-065f94186794313b0",
            "description": "Allows internet access for instance launched with ASG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065f94186794313b0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allows HTTP traffic into webserver",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e4366bc6d53a7380"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allows HTTPS traffic into webserver",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e4366bc6d53a7380"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allows access to webserver through ALB",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e4366bc6d53a7380"
                ],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [],
                "description": "Allows access to webserver through bastion host using SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0907e4ebae04cfa4a"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "chimein-server-main-autoscaling-group-sg",
            "name_prefix": "",
            "owner_id": "228407934416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-autoscaling-group-sg",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "tags_all": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-autoscaling-group-sg",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-044f2d564e357eef2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_host_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:228407934416:security-group/sg-0907e4ebae04cfa4a",
            "description": "Allows SSH into bastion host instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0907e4ebae04cfa4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows SSH into bastion host instance",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "chimein-server-main-bastion-host-sg",
            "name_prefix": "",
            "owner_id": "228407934416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-bastion-host-sg",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "tags_all": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-bastion-host-sg",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-044f2d564e357eef2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:228407934416:security-group/sg-0135c35ede16e0a38",
            "description": "Allows access to elasticache service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0135c35ede16e0a38",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allows access to redis server through ASG",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-065f94186794313b0"
                ],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [],
                "description": "Allows access to redis server through bastion host",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0907e4ebae04cfa4a"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "chimein-server-main-elasticache-sg",
            "name_prefix": "",
            "owner_id": "228407934416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-elasticache-sg",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "tags_all": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-elasticache-sg",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-044f2d564e357eef2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.autoscaling_group_sg",
            "aws_security_group.bastion_host_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:228407934416:subnet/subnet-0426c8ebf33ac0082",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0426c8ebf33ac0082",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "228407934416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-private-1a",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "tags_all": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-private-1a",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "vpc_id": "vpc-044f2d564e357eef2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:228407934416:subnet/subnet-085121e9516f66147",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085121e9516f66147",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "228407934416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-private-1b",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "tags_all": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-private-1b",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "vpc_id": "vpc-044f2d564e357eef2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:228407934416:subnet/subnet-09a1e89ec718c82ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a1e89ec718c82ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "228407934416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-public-1a",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "tags_all": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-public-1a",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "vpc_id": "vpc-044f2d564e357eef2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:228407934416:subnet/subnet-0443331a932308a5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0443331a932308a5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "228407934416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-public-1b",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "tags_all": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main-public-1b",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "vpc_id": "vpc-044f2d564e357eef2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:228407934416:vpc/vpc-044f2d564e357eef2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a9de578dc8096d3a",
            "default_route_table_id": "rtb-026845d0ee3c6247d",
            "default_security_group_id": "sg-09b02cee736a216f0",
            "dhcp_options_id": "dopt-062051c3367da09dd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-044f2d564e357eef2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-026845d0ee3c6247d",
            "owner_id": "228407934416",
            "tags": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            },
            "tags_all": {
              "Environment": "main",
              "ManagedBy": "Terraform",
              "Name": "chimein-server-main",
              "Owner": "Anubhav Hajela",
              "Project": "chimein-server"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}